2009-06-23  Thomas Moulard  <thomas.moulard@gmail.com>

	Add support for mixed derivative.
	* include/roboptim/core/derivable-parametrized-function.hh:
	Add support for mixed derivative.
	* tests/derivable-parametrized-function.cc: Update test.

2009-06-23  Thomas Moulard  <thomas.moulard@gmail.com>

	Fix distribution.
	* include/Makefile.am: Distribute missing header.
	* tests/Makefile.am: Fix typo.

2009-06-23  Thomas Moulard  <thomas.moulard@gmail.com>

	Implement DerivableParametrizedFunction.
	* include/roboptim/core/derivable-parametrized-function.hh: New.
	* include/roboptim/core/parametrized-function.hh,
	* include/roboptim/core/parametrized-function.hxx:
	Specify input/output sizes of inner function in constructor.
	* tests/Makefile.am: Run new test.
	* tests/derivable-parametrized-function.cc:
	Copy from tests/parametrized-function.cc.
	* tests/derivable-parametrized-function.stdout: New.
	* tests/parametrized-function.cc: Add input/output inner
	function size in constructor.
	* tests/testsuite.at: Run tests.

2009-06-19  Thomas Moulard  <thomas.moulard@gmail.com>

	Add parametrized function class.
	* include/Makefile.am: Distribute new header.
	* include/roboptim/core/parametrized-function.hh: New.
	* include/roboptim/core/parametrized-function.hxx: New.
	* tests/Makefile.am: Compile new test.
	* tests/parametrized-function.cc: New.
	* tests/parametrized-function.stdout: New.
	* tests/testsuite.at: Run new test.

2009-06-18  Thomas Moulard  <thomas.moulard@gmail.com>

	Make SolverFactory exception-safe.
	* include/roboptim/core/solver-factory.hxx: Make factory
	exception-safe.
	* src/Makefile.am: Restyle.

2009-06-17  Thomas Moulard  <thomas.moulard@gmail.com>

	Fix error in finite difference gradient.
	* src/finite-difference-gradient.cc: Avoid returning NaN
	if the computed difference is almost null.

2009-06-16  Thomas Moulard  <thomas.moulard@gmail.com>

	Handle NaN in copy assertions.
	* src/util.cc: Here.
